--- a/css/main.css
+++ b/css/main.css
@@ -150,9 +150,9 @@ body {
 .modal {
   position: absolute;
   left: 50%;
-  top: 54%;
+  top: 50%;
   width: 450px;
-  height: 609px;
+  height: 100vh;
   background-color: var(--secondary-color);
   transform: translate(-50%, -50%);
   padding: 40px;
@@ -187,7 +187,6 @@ body {
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
-    height: 581px;
   }
 }
 
