--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -1,43 +1,42 @@
 .modal {
-    position: absolute;
-    left: 50%;
-    top: 54%;
-    width: 450px;
-    height: 609px;
-    background-color: var(--secondary-color);
-    transform: translate(-50%, -50%);
-    padding: 40px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 450px;
+  height: 100vh;
+  background-color: var(--secondary-color);
+  transform: translate(-50%, -50%);
+  padding: 40px;
 }
 
 .close-btn {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: transparent;
-    border: var(--buttonmodal-border-color);
-    cursor: pointer;
-    transition: border-color var(--duration) var(--timing-function);
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: var(--buttonmodal-border-color);
+  cursor: pointer;
+  transition: border-color var(--duration) var(--timing-function);
 
-    &:focus {
-        outline: none;
-        border-color: var(--accent-color);
-    }
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+  }
 }
 
 .modal-icon {
-    fill: var(--main-color);
+  fill: var(--main-color);
 }
 
 @media screen and (min-width: 1200px) {
-    .modal {
-        width: 528px;
-        height: 581px;
-    }
+  .modal {
+    width: 528px;
+  }
 }
