--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,6 @@ body {
   left: 50%;
   top: 50%;
   width: 450px;
-  height: 100vh;
   background-color: var(--secondary-color);
   transform: translate(-50%, -50%);
   padding: 40px;
@@ -488,6 +487,8 @@ body {
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
+  max-width: 1600px;
+  margin: 0 auto;
   text-align: center;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/mobile-hero.jpg");
   background-size: cover;
@@ -571,7 +572,7 @@ body {
 
 .plus {
   padding-top: 60px;
-  padding-bottom: 30px;
+  padding-bottom: 60px;
   background-color: var(--secondary-color);
 }
 
@@ -695,7 +696,7 @@ body {
 }
 
 .our-team {
-  padding-top: 30px;
+  padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--our-team-color);
 }
@@ -816,7 +817,7 @@ body {
 }
 
 .client-list {
-  flex-basis: calc((100% - 2 * 30px) / 2);
+  flex-basis: calc((100% - 1 * 30px) / 2);
   height: 92px;
   margin-bottom: 30px;
 }
@@ -856,7 +857,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .client-list {
-    flex-basis: calc((100% - 3 * 30px) / 3);
+    flex-basis: calc((100% - 2 * 30px) / 3);
   }
   .client-list:not(:nth-child(2n)) {
     margin-right: unset;
@@ -951,10 +952,9 @@ body {
 }
 
 .network-item {
-  flex-basis: calc((100% - 1 * 30px) / 1);
+  max-width: 450px;
   border: 1px solid var(--network-border-color);
   display: block;
-  margin-bottom: 30px;
 }
 
 .network-item:not(:last-child) {
@@ -1020,9 +1020,8 @@ body {
     margin-bottom: unset;
   }
   .network-item {
-    flex-basis: calc((100% - 2 * 30px) / 2);
+    flex-basis: calc((100% - 1 * 30px) / 2);
     border: 1px solid var(--network-border-color);
-    margin-bottom: 30px;
   }
   .network-item:not(:nth-child(2n)) {
     margin-right: 30px;
@@ -1044,7 +1043,7 @@ body {
     margin-bottom: 50px;
   }
   .network-item {
-    flex-basis: calc((100% - 60px) / 3);
+    flex-basis: calc((100% - 2 * 30px) / 3);
     border: 1px solid var(--network-border-color);
   }
   .network-item:not(:nth-child(2n)) {
