--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,6 +1,8 @@
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
+  max-width: 1600px;
+  margin: 0 auto;
   text-align: center;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
