--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,190 +1,188 @@
 .main-portfolio {
-    padding-top: 60px;
-    padding-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .button-class {
-    display: flex;
-    flex-wrap: wrap;
-    font-family: inherit;
-    margin-bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  font-family: inherit;
+  margin-bottom: 40px;
 }
 
 .list-button {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 
-    &:not(:last-child) {
-        margin-right: 8px;
-    }
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
 
-    &:nth-last-child(-n + 2) {
-        margin-bottom: 0;
-    }
+  &:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
 }
 
 .button {
-    padding: 6px 22px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--main-color);
-    cursor: pointer;
-    border-radius: 4px;
-    border: none;
-    background: var(--button-color);
+  padding: 6px 22px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+  cursor: pointer;
+  border-radius: 4px;
+  border: none;
+  background: var(--button-color);
 
-    transition: color var(--duration) var(--timing-function),
-        background-color var(--duration) var(--timing-function),
-        box-shadow var(--duration) var(--timing-function);
+  transition: color var(--duration) var(--timing-function),
+    background-color var(--duration) var(--timing-function),
+    box-shadow var(--duration) var(--timing-function);
 
-    &:hover,
-    &:focus {
-        color: var(--secondary-color);
-        background-color: var(--accent-color);
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-            0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
-}
-.current {
+  &:hover,
+  &:focus {
     color: var(--secondary-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+.current {
+  color: var(--secondary-color);
+  background-color: var(--accent-color);
 }
 
 .network-link {
-    display: block;
-    transition: box-shadow var(--duration) var(--timing-function);
+  display: block;
+  transition: box-shadow var(--duration) var(--timing-function);
 
-    &:hover,
-    &:focus {
-        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-            0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .network-union {
-    padding: 20px 24px;
+  padding: 20px 24px;
 }
 
 .network-item {
-    flex-basis: calc((100% - 1 * 30px) / 1);
-    border: 1px solid var(--network-border-color);
-    display: block;
-    margin-bottom: 30px;
+  max-width: 450px;
+  border: 1px solid var(--network-border-color);
+  display: block;
 
-    &:not(:last-child) {
-        margin-bottom: 30px;
-    }
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .portfolio-title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color: var(--main-color);
-    margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--main-color);
+  margin-bottom: 4px;
 }
 
 .portfolio-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
-    color: var(--p-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: var(--p-text-color);
 }
 
 .network-overlay {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    padding: 63px 24px;
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-    color: var(--secondary-color);
-    background-color: var(--bagcolor-overlay);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+  background-color: var(--bagcolor-overlay);
 
-    transform: translateY(101%);
-    transition: transform var(--duration) var(--timing-function);
+  transform: translateY(101%);
+  transition: transform var(--duration) var(--timing-function);
 
-    .network-link:hover &,
-    .network-link:focus & {
-        transform: translateY(0%);
-    }
+  .network-link:hover &,
+  .network-link:focus & {
+    transform: translateY(0%);
+  }
 }
 
 @media screen and (min-width: 768px) {
-    .network {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-    }
+  .network {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 
-    .button-class {
-        flex-wrap: unset;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 30px;
-    }
+  .button-class {
+    flex-wrap: unset;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+  }
 
-    .list-button {
-        margin-bottom: unset;
-    }
+  .list-button {
+    margin-bottom: unset;
+  }
 
-    .network-item {
-        flex-basis: calc((100% - 2 * 30px) / 2);
-        border: 1px solid var(--network-border-color);
-        margin-bottom: 30px;
+  .network-item {
+    flex-basis: calc((100% - 1 * 30px) / 2);
+    border: 1px solid var(--network-border-color);
 
-        &:not(:nth-child(2n)) {
-            margin-right: 30px;
-        }
+    &:not(:nth-child(2n)) {
+      margin-right: 30px;
     }
-    .network-union {
-        padding-top: 20px;
-        padding-bottom: 20px;
-        padding-left: 21px;
-        padding-right: 0;
-    }
+  }
+  .network-union {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 21px;
+    padding-right: 0;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-    .main-portfolio {
-        padding-top: 94px;
-        padding-bottom: 94px;
+  .main-portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  .button-class {
+    margin-bottom: 50px;
+  }
+
+  .network-item {
+    flex-basis: calc((100% - 2 * 30px) / 3);
+    border: 1px solid var(--network-border-color);
+
+    &:not(:nth-child(2n)) {
+      margin-right: unset;
     }
 
-    .button-class {
-        margin-bottom: 50px;
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
     }
 
-    .network-item {
-        flex-basis: calc((100% - 60px) / 3);
-        border: 1px solid var(--network-border-color);
-
-        &:not(:nth-child(2n)) {
-            margin-right: unset;
-        }
-
-        &:not(:nth-child(3n)) {
-            margin-right: 30px;
-        }
-
-        &:nth-last-child(-n + 3) {
-            margin-bottom: 0;
-        }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
     }
+  }
 
-    .network-union {
-        padding: 20px 24px;
-    }
+  .network-union {
+    padding: 20px 24px;
+  }
 }
