--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -3,6 +3,7 @@
   left: 50%;
   top: 50%;
   width: 450px;
+  height: 100vh;
   background-color: var(--secondary-color);
   transform: translate(-50%, -50%);
   padding: 40px;
@@ -38,15 +39,11 @@
   .modal {
     width: 96%;
   }
-
-  .close-btn {
-    top: 20px;
-  }
 }
 
-@media screen and (max-width: 324px) {
-  .close-btn {
-    top: 30px;
+@media screen and (min-width: 768px) {
+  .modal {
+    height: unset;
   }
 }
 
